added queries file

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,10 +5,10 @@
 <section class="section">
     <div class="container">
       <h1 class="title">
-        Hello World
+        Welcome to The IGUS app!
       </h1>
       <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
+        IGUS stands for Instagram User Share <strong>Yay!</strong>!
       </p>
     </div>
     <a class="button is-focused">Focus</a>
