--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,7 @@
       <p class="subtitle">
         IGUS stands for Instagram User Share <strong>Yay!</strong>!
       </p>
+      <p>Add your instagram here!</p>
     </div>
     <a class="button is-focused">Focus</a>
 <a class="button is-primary is-focused">Focus</a>
